--- a/apply1/src/styles/main.scss
+++ b/apply1/src/styles/main.scss
@@ -43,100 +43,107 @@ header .apply-title {
     outline: none;
 }
 
-
-.container {
+.apply-container {
     width: 600px;
     margin: 0 auto;
-
-    .apply-wrap {
-        padding: 10px;
-        border: 1px solid #ddd;
-        border-radius: 5px;
-
-        .apply-header{
-            input {
-                width: 560px;
-                height: 28px;
-                font-size: 14px;
-                border: 1px solid #ccc;
-                border-radius: 4px;
-                padding: 4px 7px;
-            }
-            input:focus {
-                outline: none;
-                border-color: rgba(82,168,236,0.8);
-                box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(82,168,236,0.6);
-            }
-        }
-
-        .apply-main {
-
-            margin-left: 0px;
-            border: 1px solid #ddd;
-            border-radius: 2px;
-            padding: 0px;
-
-            li {
-                list-style: none;
-                height: 36px;
-                line-height: 36px;
-                padding: 0 5px;
-                border-bottom: 1px solid #ddd;
-                label {
-                    float: left;
-                    cursor: pointer;
-                    input {
-                        vertical-align: middle;
-                        margin-right: 6px;
-                        position: relative;
-                        top: -1px;
-                    }
-                }
-                #del-btn {
-                    float: right;
-                    display: none;
-                    margin-top: 3px;
-                }
-            }
-            li:before {
-                content: initial;
-            }
-            li:last-child {
-                border-bottom: none;
-            }
-
-        }
-
-        .apply-empty {
-            height: 40px;
-            line-height: 40px;
-            border: 1px solid #ddd;
-            border-radius: 2px;
-            padding-left: 5px;
-            margin-top: 10px;
-        }
-
-        .apply-footer {
-            height: 40px;
-            line-height: 40px;
-            padding-left: 6px;
-            margin-top: 5px;
-            label {
-                display: inline-block;
-                margin-right: 20px;
-                cursor: pointer;
-                input {
-                    position: relative;
-                    top: -1px;
-                    vertical-align: middle;
-                    margin-right: 5px;
-                }
-            }
-            button {
-                float: right;
-                margin-top: 5px;
-            }
-        }
-
-    }
 }
+
+.apply-wrap {
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+}
+
+.apply-wrap .work-header input {
+    width: 560px;
+    height: 28px;
+    font-size: 14px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    padding: 4px 7px;
+}
+
+.apply-wrap .work-header input:focus {
+    outline: none;
+    border-color: rgba(82,168,236,0.8);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(82,168,236,0.6);
+}
+    
+.apply-wrap .work-main {
+    margin-left: 0px;
+    border: 1px solid #ddd;
+    border-radius: 2px;
+    padding: 0px;
+}
+
+.apply-wrap .work-main li{
+    list-style: none;
+    height: 36px;
+    line-height: 36px;
+    padding: 0 5px;
+    border-bottom: 1px solid #ddd;
+}       
+
+.apply-wrap .work-main li label{
+    float: left;
+    cursor: pointer;
+}
+
+.apply-wrap .work-main li label input {
+    vertical-align: middle;
+    margin-right: 6px;
+    position: relative;
+    top: -1px;
+}
+
+.apply-wrap .work-main li #del-btn {
+    float: right;
+    display: none;
+    margin-top: 3px;
+}
+
+.apply-wrap .work-main li:before {
+    content: initial;
+}
+
+.apply-wrap .work-main li:last-child {
+    border-bottom: none;
+}
+        
+
+.apply-empty {
+    height: 40px;
+    line-height: 40px;
+    border: 1px solid #ddd;
+    border-radius: 2px;
+    padding-left: 5px;
+    margin-top: 10px;
+}
+
+.work-footer {
+    height: 40px;
+    line-height: 40px;
+    padding-left: 6px;
+    margin-top: 5px;
+}
+
+.work-footer label {
+    display: inline-block;
+    margin-right: 20px;
+    cursor: pointer;
+}
+
+.work-footer label input {
+    position: relative;
+    top: -1px;
+    vertical-align: middle;
+    margin-right: 5px;
+}
+
+.work-footer  button {
+    float: right;
+    margin-top: 5px;
+}
+        
+
+    
